<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context="tech.toughput.simplekotlinformulacalc.MainActivity">

    <Button
        android:id="@+id/luas_segitiga"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/rumus_luas_segitiga" />

    <Button
        android:id="@+id/luas_persegi"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/rumus_luas_persegi_persegi_panjang"/>

    <Button
        android:id="@+id/luas_jajargenjang"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/rumus_luas_jajargenjang"/>

    <Button
        android:id="@+id/luas_lingkaran"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/rumus_luas_lingkaran"/>


</LinearLayout>
