<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tech.toughput.simplekotlinformulacalc.LuasJajargenjangActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alas"
        android:textSize="16sp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/alasJajargenjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        android:textSize="16sp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/tinggiJajargenjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/hitungJajargenjang"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/hitung"/>

    <TextView
        android:id="@+id/hasilJajargenjang"
        android:layout_margin="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"/>

</LinearLayout>
